# indi-focuser-esp32s3

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
3d_files/celestron-nexstar-8se/: nexstar_8se_motor_mount.scad
3d_files/celestron-nexstar-8se/stl/: nexstar_8se_motor_mount.stl
3d_files/print-guide/: PRINT_GUIDE.md  QUICK_REFERENCE.md  indi-focuser-PETG-filament.json  indi-focuser-PETG-gears.json  indi-focuser-PETG-structural.json
3d_files/rvo-horizon-60ed/: rvo_horizon_60ed_motor_mount.scad
3d_files/rvo-horizon-60ed/stl/: rvo_horizon_60ed_motor_mount.stl
3d_files/skywatcher-explorer-200p/: sw_explorer_200p_motor_mount.scad
3d_files/skywatcher-explorer-200p/stl/: sw_explorer_200p_motor_mount.stl
docs/: 3d_printing.md  build.md  calibration.md  getting-started.md  wiring.md
firmware/: oag_focuser_firmware.ino
indi_driver/: CMakeLists.txt  indi_oag_focuser.cpp  indi_oag_focuser.h  indi_oag_focuser.xml
scripts/: 99-oag-focuser.rules  oag_focuser_test.py
